--- a/scrolltrigger cgi effect/style.css
+++ b/scrolltrigger cgi effect/style.css
@@ -39,13 +39,14 @@ h1 {
   position: relative;
 }
 
-.container {
+.container,
+.multiple-layers {
   width: auto;
   height: 100vh;
-  /* margin-bottom: 300vh; */
 }
 
-.container > img {
+.container > img,
+.multiple-layers > img {
   position: absolute;
 
   display: inline-block;
@@ -54,7 +55,8 @@ h1 {
   margin: auto;
 }
 
-.container span {
+.container span,
+.multiple-layers span {
   top: 0;
   left: 0;
   width: 0;
@@ -63,7 +65,8 @@ h1 {
   position: absolute;
 }
 
-.container span img {
+.container span img,
+.multiple-layers span img {
   position: absolute;
   left: 0;
   top: 0;
@@ -71,4 +74,9 @@ h1 {
   height: 100% !important;
   width: auto !important;
   max-width: none !important;
+}
+
+.sp-h {
+  margin: 150px auto;
+  text-align: center;
 }
